[metadata]
name = pyQArk
#version = attr: my_package.VERSION
version = 0.2
author = Arnaud Kelbert
author_email = arnaud.kelbert@gmail.com
description = Python 3 Qt5 framework
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = BSD-3-Clause
classifiers =
    Framework :: Qt5
    Programming Language :: Python :: 3

[options]
#include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    lxml
    PyQt5

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.rst, *.ui
hello = *.msg

#[options.extras_require]
#pdf = ReportLab>=1.2; RXP
#rest = docutils>=0.3; pack ==1.1, ==1.3


