[metadata]
name = pyQArk
#version = attr: my_package.VERSION
version = 0.3
url = https://github.com/arnaudkelbert/pyqark
author = Arnaud Kelbert
author_email = arnaud.kelbert@gmail.com
description = Python 3 Qt5 framework
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = Apache V2
classifiers =
    Environment :: X11 Applications :: Qt
    Programming Language :: Python
    Programming Language :: Python :: 3
platforms = any

[options]
#include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    lxml >=4.9.2
    PyQt5 >= 5.15.9
    pyqtgraph >= 0.13.3
    requests >= 2.31.0
    pandas >= 2.0.3
    matplotlib >= 3.7.1
    numpy >= 1.24.4

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.rst, *.ui
hello = *.msg

#[options.extras_require]
#pdf = ReportLab>=1.2; RXP
#rest = docutils>=0.3; pack ==1.1, ==1.3


